maze.island.IslandMaze.scala.error
Erreur de compilation :
IslandMaze:14: error: reassignment to val
  setDirection = Direction.EAST
               ^